# marsGitcollab

./: README.md
talklisten/: CMakeLists.txt  package.xml
talklisten/launch/: my_robot.launch
talklisten/msg/: Num.msg
talklisten/programs/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  position_receive.cpp  position_send.cpp
talklisten/srv/: Position.srv
talklisten/urdf/: my_robot.urdf
tutorials/devel/: local_setup.sh  setup.sh
tutorials/devel/include/talklisten/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h  Position.h  PositionRequest.h  PositionResponse.h  posi.h
tutorials/devel/lib/pkgconfig/: move_bb8_pkg.pc  talklisten.pc
tutorials/devel/lib/talklisten/: add_two_ints_client  add_two_ints_server  listene  position_receive  position_send  talke
tutorials/devel/share/gennodejs/ros/talklisten/msg/: Num.js  (+2 more)
tutorials/devel/share/move_bb8_pkg/cmake/: move_bb8_pkgConfig.cmake
tutorials/devel/share/roseus/ros/talklisten/: manifest.l
tutorials/devel/share/talklisten/cmake/: talklisten-msg-extras.cmake  talklistenConfig.cmake
tutorials/src/linux_course_files/move_bb8_pkg/src/: bb8_keyboard.py
tutorials/src/talklisten/: CMakeLists.txt  package.xml
tutorials/src/talklisten/gazebo/: robot.gazebo
tutorials/src/talklisten/launch/: min.launch  my_robot.launch
tutorials/src/talklisten/programs/: listener.cpp  position_receive.cpp  position_send.cpp  talker.cpp
tutorials/src/talklisten/rviz/: config_file.rviz
tutorials/src/talklisten/urdf/: my_robot.urdf.xacro
tutorials/src/talklisten/worlds/: my_world.world
(+25 files in other folders)
